--- a/templates/ios/Example/Podfile
+++ b/templates/ios/Example/Podfile
@@ -1,11 +1,6 @@
-use_frameworks!
+source 'https://github.com/CocoaPods/Specs.git'
+source 'https://github.com/TuyaInc/TYPublicSpecs.git'
 
 target '${POD_NAME}_Example' do
   pod '${POD_NAME}', :path => '../'
-
-  target '${POD_NAME}_Tests' do
-    inherit! :search_paths
-
-    ${INCLUDED_PODS}
-  end
 end
